syntax = "proto3";

message WrapperBullFightMessage{
    oneof msg {
        BullFightUserSitDownReceive userSitDownReceive = 1;
        BullFightUserSitDownSend userSitDownSend = 2;
        BullFightUserItem userItem = 3;
        BullFightUsersItem usersItem = 4;
        BullFightApplyBankerReceive applyBankerReceive = 5;
        BullFightApplyBankerSend applyBankerSend = 6;
        BullFightCancelBanker cancelBanker = 7;
        BullFightChangeBanker changeBanker = 8;
        BullFightPlaceBetFail placeBetFail = 9;
        BullFightPlaceBetReceive placeBetReceive = 10;
        BullFightPlaceAllBetSend PlaceAllBetSend = 11;
        BullFightPlaceBetSend placeBetSend = 12;
        BullFightContinueBet continueBet = 13;
        BullFightStatusChang StatusChang = 14;
        BullFightGameEnd gameEnd = 15;
        BullFightTableCardArray tableCardArray =16;
        BullFightPlayScore PlayScore = 17;
        BullFightRecordRoadArrayInt recordRoadArrayInt = 18;
        BullFightRecordRoadInt recordRoadInt= 19;
        BullFightUserStandUp userStandUp = 20;
        BullFightUserStateChange userStateChange = 21;
        BullFightTipsMessage tipsMessage = 22;
        BullFightCheckSeated checkSeated = 23;
        BullFightConfigurationInformation configurationInformation = 24;
    }
}

//坐下进入房间 （前端传给我）
message BullFightUserSitDownReceive {
    int64 UserID = 1;          //用户ID
    int32 RoomId = 2;          //房间ID
}

//给前端
message BullFightUserSitDownSend {
    BullFightUserItem userItem = 1;
    BullFightStatusChang StatusChang = 2;
    BullFightChangeBanker changeBanker = 3;
    BullFightRecordRoadArrayInt RecordRoadArrayInt = 4;
    BullFightConfigurationInformation configurationInformation = 5;
    BullFightUsersItem usersItem = 6;
    BullFightGameEnd gameEnd = 7;
}

message BullFightUserItem {
    int64 UserID = 1;          //用户ID
    string UserName = 2;       //用户昵称
    string UserProfile = 3;    //用户头像
    int64 UserGold = 4;        //用户金币
    int32 ChairID = 5;         //座位ID
}
//
message BullFightUsersItem {
    repeated BullFightUserItem userItem = 1; //用户信息
    int32 ListUserCount = 2;         //列表人数
}

//申请庄家 前端给我
message BullFightApplyBankerReceive {
    int64 UserID = 1;          //申请用户ID
}

message BullFightApplyBankerSend {
    repeated int32 ChairID = 1;     //申请上庄用户位置
    int32 ListApplyCount = 2;        //申请人数
}

message BullFightCancelBanker {
    int64 CancelUser = 1;     //取消上庄用户位置
    int32 ListApplyCount = 2; //申请人数
}

//换庄
message BullFightChangeBanker{
    int64 BankerUser = 1;    //当前庄家
    int64 BankerScore = 2;   //庄家分数
    int32 ListApplyCount = 3;//申请人数
    bool AndroidUser = 4 ;//机器标识
    int64 BankerID = 5;          //庄家ID
    string BankerName = 6;       //庄家昵称
    string BankerProfile = 7;    //庄家头像
}

//下注失败
message BullFightPlaceBetFail {
    int64 PlaceUse = 1;     //下注玩家
    int64 BetArea = 2;      //下注区域
    int64 PlaceScore = 3;   //当前下注
    int32 Tips = 4;        //提示信息
}

//下注 前端给我
message BullFightPlaceBetReceive {
    int32 ChairID = 1;     //用户位置
    int32 BetArea = 2;     //下注区域
    int64 BetScore = 3;    //加注数目
    int32 AndroidUser = 4 ;//机器标识
}

message BullFightPlaceAllBetSend{
    int64 AllBet = 1;      //总下注
    repeated int64 AreaAllBet = 2; //各区域总下注
}

message BullFightPlaceBetSend{
    int32 ChairID = 1;     //用户位置
    int64 UserGold = 2;    //用户金币
    int32 BetArea = 3;     //下注区域
    int64 BetScore = 4;    //加注数目
    int32 AndroidUser = 5 ;//机器标识
    int64 AllBet = 6;      //总下注
    repeated int64 AreaAllBet = 7; //各区域总下注
    repeated int64 AreaPlayBet = 8; //玩家各区域下注
}

//续注 前端给我
message BullFightContinueBet{
    int32 ChairID = 1;         //座位ID
    repeated int64 AreaPlayBet = 2; //玩家各区域下注
    int64 AllBet = 3;      //总下注
    repeated int64 AreaAllBet = 4; //各区域总下注
}

//状态改变
message BullFightStatusChang{
    int32 Status = 1;                     //具体状态
    int64 TimeLeave = 2;                  //当前时间
}

//游戏结束
message BullFightGameEnd
{
    int64 UserScore = 1;                        //玩家个人成绩
    //扑克信息
    repeated BullFightTableCardArray TableCardArray = 2;//桌面扑克
    repeated BullFightTableCardArray TableCardArrayLater = 3;//桌面扑克
    repeated int32 CardType = 4;               //牌型
    //庄家信息
    int64 BankerScore = 5;                  //庄家成绩
    int64 BankerTotallScore = 6;            //庄家总成绩
    int32 BankerTime = 7;                   //做庄次数
    //玩家成绩
    repeated BullFightPlayScore PlayScore= 8; //每个玩家成绩
    int64 PlayAllScore = 9;                  //玩家总成绩
    //全局信息
    int64 Revenue = 10;                     //游戏税收
    repeated int64 WinArea = 11;           //各区域输赢
}

message BullFightTableCardArray
{
    repeated string TableCard = 1; //桌面扑克
}

message BullFightPlayScore{
    int64 UserID = 1;          //用户ID
    int32 ChairID = 2;         //座位ID
    int64 PlayScore = 3;       //玩家成绩
    string UserName = 4;       //用户昵称
    string UserProfile = 5;    //用户头像
    int64 UserGold = 6;        //用户金币
}

message BullFightRecordRoadArrayInt
{
    repeated BullFightRecordRoadInt RecordRoad = 1;
}

message BullFightRecordRoadInt
{
    repeated int32 Record = 1;
}

//用户离开 前端发我
message BullFightUserStandUp
{
    int32 ChairID = 1;         //座位ID
}
message BullFightUserStateChange
{
    int64 UserID = 1;         //用户ID
    string UserName = 2;       //用户昵称
    int32 Tips = 3;         //提示信息 0用户重连 1 用户断线
}
message BullFightTipsMessage
{
    int32 Tips = 1;         //提示信息
}
message BullFightCheckSeated
{

}

message BullFightConfigurationInformation
{
    int64 m_lApplyBankerCondition = 1;    //上庄条件
    int32 m_cbFreeTime = 2;               //空闲时间
    int32 m_cbBetTime = 3;                //下注时间
    int32 m_cbEndTime = 4;                //结束时间
}

/*
1.由于庄家强退，游戏提前结束！
2.你的金币不足以申请庄家，申请失败！
3.你已经申请了庄家，不需要再次申请！
4.游戏已经开始，不可以取消当庄！
5.分数少于 最小坐庄分数 强行换庄!"
6.做庄次数达到最大连庄数 强行换庄!"
7."恭喜"+UserName+"上庄"
8."由于你的金币数"+UserScore+"少于坐庄必须金币数"+m_lApplyBankerCondition+",你无法上庄！"
9 "现在状态为"+TestRoom.Status +"，不在下注时间"
10."您为庄家无法下注"
11."积分不足"
12."超过下注总量最大限制"
13."超过此区域可下注数量"
14.此用户已进入
15.积分未达到进入房间要求
16.连接超时
17.缓存出错
*/